# casperlabs-voting-dapp

./: README.md
smart-contract/: .gitignore  Makefile  README.md
smart-contract/contract/: Cargo.toml
smart-contract/contract/src/: contracts.rs  error.rs  input_parser.rs  lib.rs  utils.rs
smart-contract/logic/: Cargo.toml
smart-contract/logic/src/: error.rs  lib.rs  voting.rs
smart-contract/tests/: Cargo.toml
smart-contract/tests/src/: lib.rs  tests.rs  utils.rs  voting.rs
