[package]
name = "contract"
version = "0.1.0"
authors = ["Maciej Zieliński <maciej@casperlabs.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
doctest = false
test = false
bench = false

[dependencies]
casperlabs-contract = { git="https://github.com/CasperLabs/CasperLabs", branch="hackathon" }
casperlabs-types = { git="https://github.com/CasperLabs/CasperLabs", branch="hackathon" }
logic = { path = "../logic", package = "logic" }
